--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,4 +1,20 @@
-﻿body {
-  background: #15181d;
+body {
+  background: #151517;
   margin: 0;
-}
+  color: #fff; }
+
+h3 {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 1.2em;
+  text-transform: uppercase; }
+
+.siteHeader {
+  margin-bottom: 50px; }
+  .siteHeader .logo {
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.6em;
+    text-transform: uppercase;
+    line-height: 100px;
+    padding-left: 40px; }
+
+/*# sourceMappingURL=site.css.map */
