--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,20 +1,60 @@
 body {
+  background-size: 100%;
   background: #151517;
   margin: 0;
   color: #fff; }
 
-h3 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Titillium Web', sans-serif;
-  font-size: 1.2em;
   text-transform: uppercase; }
+
+h2 {
+  font-size: 1.4em; }
+
+h3 {
+  font-size: 1.2em; }
+
+h4 {
+  font-size: 1em; }
 
 .siteHeader {
   margin-bottom: 50px; }
   .siteHeader .logo {
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.6em;
+    font-size: 2em;
     text-transform: uppercase;
-    line-height: 100px;
-    padding-left: 40px; }
+    padding-top: 40px;
+    padding-left: 35px; }
+    .siteHeader .logo span {
+      display: block;
+      font-size: .35em;
+      color: #fb2740; }
+
+.mainNav {
+  margin: 42px 0 0 200px; }
+
+.homeHero {
+  min-height: 250px; }
+
+.skills h2 {
+  margin-bottom: 1.5em; }
+
+.skills h3 {
+  margin-bottom: 1em; }
+
+.skills .row {
+  margin-bottom: 2.5em; }
+
+.skills dt {
+  font-weight: normal; }
+
+.skills dl {
+  font-size: .7em; }
+
+.skills dd .fa {
+  color: #fb2740; }
+
+.hobbies .fa {
+  font-size: 2em; }
 
 /*# sourceMappingURL=site.css.map */
