--- a/public/css/bootstrap-grid.css
+++ b/public/css/bootstrap-grid.css
@@ -629,3 +629,5 @@
     margin-left: 91.6666666667%; }
   .col-xl-offset-12 {
     margin-left: 100%; } }
+
+/*# sourceMappingURL=bootstrap-grid.css.map */
