--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,5 +1,4 @@
 body {
-  background-size: 100%;
   background: #151517;
   margin: 0;
   color: #fff; }
@@ -17,24 +16,66 @@ h3 {
 h4 {
   font-size: 1em; }
 
+.siteContainer:before {
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  display: block;
+  background-image: url("../images/bg-nighthouse.jpg");
+  background-size: 100%;
+  height: 800px;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  -webkit-filter: brightness(0.2);
+  -moz-filter: brightness(0.2);
+  -o-filter: brightness(0.2);
+  -ms-filter: brightness(0.2);
+  filter: brightness(0.2); }
+
 .siteHeader {
   margin-bottom: 50px; }
   .siteHeader .logo {
     font-family: 'Titillium Web', sans-serif;
     font-size: 2em;
     text-transform: uppercase;
-    padding-top: 40px;
-    padding-left: 35px; }
+    font-weight: bold;
+    padding-top: 30px;
+    padding-left: 25px; }
     .siteHeader .logo span {
       display: block;
       font-size: .35em;
       color: #fb2740; }
+  .siteHeader .socialLinkList li {
+    margin-left: .7em; }
 
 .mainNav {
   margin: 42px 0 0 200px; }
 
+@media (min-width: 75em) {
+  .homeHero {
+    max-width: 45rem; } }
+
 .homeHero {
   min-height: 250px; }
+  .homeHero .homeHeroContent {
+    margin-top: 9rem !important; }
+  .homeHero .heroHeader, .homeHero .heroSubheader, .homeHero .heroFooter {
+    font-family: 'Open Sans', sans-serif;
+    line-height: normal; }
+  .homeHero .heroHeader {
+    font-size: 2.5em;
+    font-weight: bold; }
+  .homeHero .heroSubheader {
+    color: #fb2740;
+    font-size: 1.2em; }
+  .homeHero .heroFooter {
+    color: #656565;
+    font-size: .9em; }
 
 .skills h2 {
   margin-bottom: 1.5em; }
