--- a/public/css/site.scss
+++ b/public/css/site.scss
@@ -2,7 +2,7 @@
 
 body {
   // background: #0a0e11 url('../images/bg3.png') no-repeat;
-  background-size: 100%;
+  // background-size: 100%;
 
   background: #151517;
   margin: 0;
@@ -18,6 +18,32 @@ h2 { font-size: 1.4em; }
 h3 { font-size: 1.2em; }
 h4 { font-size: 1em; }
 
+.siteContainer:before {
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  
+  display: block;
+  background-image: url('../images/bg-nighthouse.jpg');
+  background-size: 100%;
+  // width: 1200px;
+  height: 800px;
+  
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+
+  -webkit-filter: brightness(0.2);
+  -moz-filter: brightness(0.2);
+  -o-filter: brightness(0.2);
+  -ms-filter: brightness(0.2);
+  filter: brightness(0.2);
+}
+
 .siteHeader {
 	margin-bottom: 50px;
 
@@ -25,13 +51,20 @@ h4 { font-size: 1em; }
 		font-family: 'Titillium Web', sans-serif;
 		font-size: 2em;
 		text-transform: uppercase;
-		padding-top: 40px;
-		padding-left: 35px;
+		font-weight: bold;
+		padding-top: 30px;
+		padding-left: 25px;
 		// color: $red;
 		span {
 			display: block;
 			font-size: .35em;
 			color: $red;
+		}
+	}
+
+	.socialLinkList {
+		li {
+			margin-left: .7em;
 		}
 	}
 }
@@ -40,8 +73,38 @@ h4 { font-size: 1em; }
 	margin: 42px 0 0 200px;
 }
 
+@media (min-width: 75em) {
+	.homeHero {
+	    max-width: 45rem;
+	}
+}
+
 .homeHero {
 	min-height: 250px;
+
+	.homeHeroContent {
+		margin-top: 9rem !important;
+	}
+
+	.heroHeader, .heroSubheader, .heroFooter {
+		font-family: 'Open Sans', sans-serif;
+		line-height: normal;
+	}
+
+	.heroHeader {
+		font-size: 2.5em;
+		font-weight: bold;
+	}
+
+	.heroSubheader {
+		color: $red;
+		font-size: 1.2em;
+	}
+
+	.heroFooter {
+		color: #656565;
+		font-size: .9em;
+	}
 }
 
 .skills {
