--- a/client/css/site.scss
+++ b/client/css/site.scss
@@ -48,8 +48,8 @@ h4 { font-size: 1em; }
 	margin-bottom: 50px;
 
 	.logo {
-		font-family: 'Titillium Web', sans-serif;
-		font-size: 2em;
+		font-family: 'Open Sans', sans-serif;
+		font-size: 1.5em;
 		text-transform: uppercase;
 		font-weight: bold;
 		padding-top: 30px;
@@ -75,7 +75,7 @@ h4 { font-size: 1em; }
 
 @media (min-width: 75em) {
 	.homeHero {
-	    max-width: 45rem;
+	    max-width: 40rem;
 	}
 }
 
@@ -83,27 +83,31 @@ h4 { font-size: 1em; }
 	min-height: 250px;
 
 	.homeHeroContent {
-		margin-top: 9rem !important;
+		margin-top: 15rem !important;
 	}
 
-	.heroHeader, .heroSubheader, .heroFooter {
+	.heroName, .heroHeader, .heroSubheader, .heroFooter {
 		font-family: 'Open Sans', sans-serif;
-		line-height: normal;
+	}
+
+	.heroName {
+		font-size: 3.8em;
+		font-weight: bold;
+		line-height: .8em;
 	}
 
 	.heroHeader {
-		font-size: 2.5em;
+		font-size: 2.1em;
 		font-weight: bold;
+		line-height: .8em;
+		color: $red;
 	}
 
 	.heroSubheader {
-		color: $red;
-		font-size: 1.2em;
-	}
-
-	.heroFooter {
-		color: #656565;
-		font-size: .9em;
+		color: #707070;
+		font-size: 1.1em;
+		line-height: normal;
+		margin-top: .2em;
 	}
 }
 
@@ -140,3 +144,6 @@ h4 { font-size: 1em; }
 		font-size: 2em;
 	}
 }
+
+
+@import "animation"
